added hyerlinks to all fileexcept intro

--- a/can.html
+++ b/can.html
@@ -143,5 +143,10 @@
         </p>
 
         <br>
+
+        <ul id="links">
+            <li><a href="index.html">Previous</a></li>
+            <li><a href="could.html">Next</a></li>
+        </ul>
     </body>
 </html>
