--- a/could.html
+++ b/could.html
@@ -86,6 +86,11 @@
         
         <p class="examples">
              <i>Mohan<b> <u>could </u></b> ride his cycle to campus, instead of driving his car.</i>
-         </p>
+        </p>
+
+        <ul id="links">
+            <li><a href="index.html">Previous</a></li>
+            <li><a href="could.html">Next</a></li>
+        </ul>
     </body>
 </html>
