--- a/have.html
+++ b/have.html
@@ -27,7 +27,10 @@
       <p class="examples">2. She <b>has to</b> reach the station in time otherwise she will miss the bus.</p></h3>
       <p class="examples">3. They <b>had to</b> catch a bus as the taxi drivers were on a strike.</p>
 
-               
+      <ul id="links">
+            <li><a href="index.html">Previous</a></li>
+            <li><a href="could.html">Next</a></li>
+        </ul>        
      </body>
 </html>
 
