--- a/may.html
+++ b/may.html
@@ -97,5 +97,10 @@
         <p class="examples">2. He <b>may</b> tell me tomorrow.</p>
         <br>
         <br>
+
+        <ul id="links">
+            <li><a href="index.html">Previous</a></li>
+            <li><a href="could.html">Next</a></li>
+        </ul>
     </body>
 </html>
