--- a/might.html
+++ b/might.html
@@ -62,5 +62,10 @@
         <p class="examples">
             <i>1.You <b>might</b> want to lower the seat so that your legs reach the pedals.<br><br></i>
         </p>
-</body>
+
+        <ul id="links">
+            <li><a href="index.html">Previous</a></li>
+            <li><a href="could.html">Next</a></li>
+        </ul>
+    </body>
 </html>
