--- a/must.html
+++ b/must.html
@@ -97,5 +97,11 @@
         </p>
         <br>
         <br>
+
+        
+        <ul id="links">
+            <li><a href="index.html">Previous</a></li>
+            <li><a href="could.html">Next</a></li>
+        </ul>
     </body>
 </html>
