--- a/need.html
+++ b/need.html
@@ -34,6 +34,11 @@
       <p class="examples">
             3. <b> <u>Do</u> </b> you <b> <u>need</u> </b> to go now?
       </p>
+
+      <ul id="links">
+            <li><a href="index.html">Previous</a></li>
+            <li><a href="could.html">Next</a></li>
+        </ul>
    </body>
 </html>
 
