--- a/ought.html
+++ b/ought.html
@@ -46,6 +46,11 @@
        <p class="examples">
             <i>1. This movie <u><b>ought to </b></u> be a super duper hit.</i>
       </p>
+
+      <ul id="links">
+            <li><a href="index.html">Previous</a></li>
+            <li><a href="could.html">Next</a></li>
+        </ul>
    </body>
 </html>
 
