--- a/shall.html
+++ b/shall.html
@@ -110,5 +110,10 @@
         <p class="examples">
             1.I <b>will</b> surely help you in that matter at a right time.<br>
         </p>
+
+        <ul id="links">
+            <li><a href="index.html">Previous</a></li>
+            <li><a href="could.html">Next</a></li>
+        </ul>
     </body>
 </html>
