--- a/should.html
+++ b/should.html
@@ -72,5 +72,10 @@
         </h3>
 
         <p class="examples">1. They <b>should</b> have done it by that time.</p>
+
+        <ul id="links">
+            <li><a href="index.html">Previous</a></li>
+            <li><a href="could.html">Next</a></li>
+        </ul>
     </body>
 </html>
