--- a/would.html
+++ b/would.html
@@ -80,5 +80,9 @@
             <i><u>1.They <b>would</b> hire a cab if they did not have a car with them at that time.</u></i>
         </p>
 
+        <ul id="links">
+            <li><a href="index.html">Previous</a></li>
+            <li><a href="could.html">Next</a></li>
+        </ul>
     </body>
 </html>
