--- a/have.html
+++ b/have.html
@@ -28,9 +28,20 @@
       <p class="examples">3. They <b>had to</b> catch a bus as the taxi drivers were on a strike.</p>
 
       <ul id="links">
-            <li><a href="index.html">Previous</a></li>
-            <li><a href="could.html">Next</a></li>
-        </ul>        
+            <li>
+                  <a href="index.html">
+                        <img src="images/link.png" alt="link">
+                        Previous
+                  </a>
+            </li>
+            
+            <li>
+                  <a href="could.html">
+                        <img src="images/link.png" alt="link">
+                        Next
+                  </a>
+            </li>
+        </ul>     
      </body>
 </html>
 
