--- a/must.html
+++ b/must.html
@@ -98,10 +98,21 @@
         <br>
         <br>
 
-        
-        <ul id="links">
-            <li><a href="index.html">Previous</a></li>
-            <li><a href="could.html">Next</a></li>
+
+<ul id="links">
+            <li>
+                  <a href="index.html">
+                        <img src="images/link.png" alt="link">
+                        Previous
+                  </a>
+            </li>
+            
+            <li>
+                  <a href="could.html">
+                        <img src="images/link.png" alt="link">
+                        Next
+                  </a>
+            </li>
         </ul>
     </body>
 </html>
