--- a/ought.html
+++ b/ought.html
@@ -48,8 +48,19 @@
       </p>
 
       <ul id="links">
-            <li><a href="index.html">Previous</a></li>
-            <li><a href="could.html">Next</a></li>
+            <li>
+                  <a href="index.html">
+                        <img src="images/link.png" alt="link">
+                        Previous
+                  </a>
+            </li>
+            
+            <li>
+                  <a href="could.html">
+                        <img src="images/link.png" alt="link">
+                        Next
+                  </a>
+            </li>
         </ul>
    </body>
 </html>
