--- a/should.html
+++ b/should.html
@@ -74,8 +74,19 @@
         <p class="examples">1. They <b>should</b> have done it by that time.</p>
 
         <ul id="links">
-            <li><a href="index.html">Previous</a></li>
-            <li><a href="could.html">Next</a></li>
+            <li>
+                  <a href="index.html">
+                        <img src="images/link.png" alt="link">
+                        Previous
+                  </a>
+            </li>
+            
+            <li>
+                  <a href="could.html">
+                        <img src="images/link.png" alt="link">
+                        Next
+                  </a>
+            </li>
         </ul>
     </body>
 </html>
