--- a/need.html
+++ b/need.html
@@ -28,7 +28,7 @@
       </p>
 
       <p class="examples">
-            2.He <b> <u>need</u> </b> not go.(<i>note;~in nagative sentences, "need"dosen't have -s and -ed forms.</i> )
+            2.He <b> <u>need</u> </b> not go.(<i>note:- in negative sentences, "need"dosen't have -s and -ed forms.</i> )
       </p>
          
       <p class="examples">
