--- a/can.html
+++ b/can.html
@@ -143,20 +143,18 @@
         </p>
 
         <br>
-
         <ul id="links">
             <li>
-                  <a href="index.html">
-                        <img src="images/link.png" alt="link">
-                        Previous
-                  </a>
+                <a href="table.html">
+                    <img src="images/link.png" alt="Previous">
+                    Previous
+                </a>
             </li>
-            
             <li>
-                  <a href="could.html">
-                        <img src="images/link.png" alt="link">
-                        Next
-                  </a>
+                <a href="Could">
+                    <img src="images/link.png" alt="Next">
+                    Next
+                </a>
             </li>
         </ul>
     </body>
