--- a/can.html
+++ b/can.html
@@ -151,7 +151,7 @@
                 </a>
             </li>
             <li>
-                <a href="Could">
+                <a href="could.html">
                     <img src="images/link.png" alt="Next">
                     Next
                 </a>
