--- a/could.html
+++ b/could.html
@@ -90,17 +90,16 @@
 
         <ul id="links">
             <li>
-                  <a href="index.html">
-                        <img src="images/link.png" alt="link">
-                        Previous
-                  </a>
+                <a href="can.html">
+                    <img src="images/link.png" alt="Previous">
+                    Previous
+                </a>
             </li>
-            
             <li>
-                  <a href="could.html">
-                        <img src="images/link.png" alt="link">
-                        Next
-                  </a>
+                <a href="may.html">
+                    <img src="images/link.png" alt="Next">
+                    Next
+                </a>
             </li>
         </ul>
     </body>
