--- a/shall.html
+++ b/shall.html
@@ -113,14 +113,14 @@
 
         <ul id="links">
             <li>
-                  <a href="index.html">
+                  <a href="might.html">
                         <img src="images/link.png" alt="link">
                         Previous
                   </a>
             </li>
             
             <li>
-                  <a href="could.html">
+                  <a href="should.html">
                         <img src="images/link.png" alt="link">
                         Next
                   </a>
