--- a/have.html
+++ b/have.html
@@ -29,19 +29,18 @@
 
       <ul id="links">
             <li>
-                  <a href="index.html">
-                        <img src="images/link.png" alt="link">
-                        Previous
-                  </a>
+                <a href="must.html">
+                    <img src="images/link.png" alt="Previous">
+                    Previous
+                </a>
             </li>
-            
             <li>
-                  <a href="could.html">
-                        <img src="images/link.png" alt="link">
-                        Next
-                  </a>
+                <a href="need.html">
+                    <img src="images/link.png" alt="Next">
+                    Next
+                </a>
             </li>
-        </ul>     
+        </ul>    
      </body>
 </html>
 
