--- a/may.html
+++ b/may.html
@@ -100,14 +100,14 @@
 
         <ul id="links">
             <li>
-                  <a href="index.html">
+                  <a href="could.html">
                         <img src="images/link.png" alt="link">
                         Previous
                   </a>
             </li>
             
             <li>
-                  <a href="could.html">
+                  <a href="might.html">
                         <img src="images/link.png" alt="link">
                         Next
                   </a>
