--- a/must.html
+++ b/must.html
@@ -101,14 +101,14 @@
 
 <ul id="links">
             <li>
-                  <a href="index.html">
+                  <a href="would.html">
                         <img src="images/link.png" alt="link">
                         Previous
                   </a>
             </li>
             
             <li>
-                  <a href="could.html">
+                  <a href="have.html">
                         <img src="images/link.png" alt="link">
                         Next
                   </a>
