--- a/ought.html
+++ b/ought.html
@@ -49,14 +49,14 @@
 
       <ul id="links">
             <li>
-                  <a href="index.html">
+                  <a href="Need.html">
                         <img src="images/link.png" alt="link">
                         Previous
                   </a>
             </li>
             
             <li>
-                  <a href="could.html">
+                  <a href="#">
                         <img src="images/link.png" alt="link">
                         Next
                   </a>
