--- a/should.html
+++ b/should.html
@@ -75,14 +75,14 @@
 
         <ul id="links">
             <li>
-                  <a href="index.html">
+                  <a href="shall.html">
                         <img src="images/link.png" alt="link">
                         Previous
                   </a>
             </li>
             
             <li>
-                  <a href="could.html">
+                  <a href="would.html">
                         <img src="images/link.png" alt="link">
                         Next
                   </a>
