--- a/might.html
+++ b/might.html
@@ -65,14 +65,14 @@
 
         <ul id="links">
             <li>
-                  <a href="index.html">
+                  <a href="may.html">
                         <img src="images/link.png" alt="link">
                         Previous
                   </a>
             </li>
             
             <li>
-                  <a href="could.html">
+                  <a href="shall.html">
                         <img src="images/link.png" alt="link">
                         Next
                   </a>
