--- a/need.html
+++ b/need.html
@@ -37,14 +37,14 @@
 
       <ul id="links">
             <li>
-                  <a href="index.html">
+                  <a href="have.html">
                         <img src="images/link.png" alt="link">
                         Previous
                   </a>
             </li>
             
             <li>
-                  <a href="could.html">
+                  <a href="ought.html">
                         <img src="images/link.png" alt="link">
                         Next
                   </a>
