--- a/ought.html
+++ b/ought.html
@@ -49,7 +49,7 @@
 
       <ul id="links">
             <li>
-                  <a href="Need.html">
+                  <a href="need.html">
                         <img src="images/link.png" alt="link">
                         Previous
                   </a>
