--- a/can.html
+++ b/can.html
@@ -11,6 +11,8 @@
                 <center><b><u>CAN</u></b></center>
             </h3>
         </div>
+
+        <img class="visual" src="images/can.jpg" alt="Can" height="300px" width="200px">
         
         <h5 class="uses">
             (a)
