Added some images

--- a/could.html
+++ b/could.html
@@ -13,6 +13,8 @@
             </h2>
         </div>
 
+        <img class="visual" src="images/could.jpg" alt="Could" height="300px" width="220px">
+
          <h5 class="uses">
              (a)
          </h5>
