--- a/may.html
+++ b/may.html
@@ -12,6 +12,8 @@
                 <center><b><u>MAY</u></b></center>
             </h3>
         </div>
+
+        <img class="visual" src="images/may.jpeg" alt="May" height="300px" width="220px">
         
         <h5 class="uses">
             (a)
