--- a/must.html
+++ b/must.html
@@ -12,6 +12,8 @@
             </h3>
         </div>
 
+        <img class="visual" src="images/modal-verbs.jpg" alt="May">
+
         <h5 class="uses">
             (a)
         </h5>
