--- a/table.html
+++ b/table.html
@@ -6,7 +6,7 @@
     </head>
     <body class="bg">
         <div id="content">
-            <h1 id="main">Auxiliaries</h1>
+            <h1 id="main">Modal Auxiliaries</h1>
         </div>
         <Table>
             <tr>
