added images into can and could.

--- a/can.html
+++ b/can.html
@@ -12,7 +12,7 @@
             </h3>
         </div>
 
-        <img class="visual" src="images/can.jpg" alt="Can" height="300px" width="200px">
+        <img class="visual" src="images/Can.jpg" alt="Can" width="400px">
         
         <h5 class="uses">
             (a)
