--- a/could.html
+++ b/could.html
@@ -13,7 +13,7 @@
             </h2>
         </div>
 
-        <img class="visual" src="images/could.jpg" alt="Could" height="300px" width="220px">
+        <img class="visual" src="images/Could.jpg" alt="Could" width="400px">
 
          <h5 class="uses">
              (a)
