Added images to all pages

--- a/have.html
+++ b/have.html
@@ -7,9 +7,11 @@
    <body class="bg">
       <div class="content">
             <h3 class="title" id="main">
-                  <b><u>Have to/Has to/Had to:-</u></b>
+                  <center><b><u>Have to/Has to/Had to</u></b></center>
             </h3>
       </div>
+
+      <img class="visual" src="images/Have to-has to-had to.jpg" alt="Have" width="400px">
       
       <h5 class="uses">
             (a)
