--- a/may.html
+++ b/may.html
@@ -13,7 +13,7 @@
             </h3>
         </div>
 
-        <img class="visual" src="images/may.jpeg" alt="May" height="300px" width="220px">
+        <img class="visual" src="images/May.jpg" alt="May" width="400px">
         
         <h5 class="uses">
             (a)
