--- a/might.html
+++ b/might.html
@@ -11,6 +11,8 @@
             </h2>
         </div>
 
+        <img class="visual" src="images/Might.jpg" alt="Might" width="400px">
+
         <h5 class="uses">
             (a)
         </h5>
