--- a/must.html
+++ b/must.html
@@ -12,7 +12,7 @@
             </h3>
         </div>
 
-        <img class="visual" src="images/modal-verbs.jpg" alt="May">
+        <img class="visual" src="images/Must.jpg" alt="Must" width="400px">        
 
         <h5 class="uses">
             (a)
