--- a/need.html
+++ b/need.html
@@ -10,6 +10,8 @@
                   <center><b>Need</b></center>
             </h3>
       </div>
+
+      <img class="visual" src="images/Need.jpg" alt="Need" width="400px">
       
       <h5 class="uses">
             (a)
