--- a/ought.html
+++ b/ought.html
@@ -10,6 +10,8 @@
                   <center><b><u>Ought to</u></b></center>
             </h3>
       </div>
+
+      <img class="visual" src="images/Ought to.jpg" alt="Ought" width="400px">
       
       <h5 class="uses">
             (a)
