--- a/shall.html
+++ b/shall.html
@@ -6,9 +6,12 @@
     </head>
     <body class="bg">
         <div class="content" id="main">
-        <center><b><u><h1>" Shall, Will "</h1></u></b></center><br>
+        <center><b><u><h1>Shall, Will</h1></u></b></center><br>
         </div>
         <br>
+
+        <img class="visual" src="images/Shall-will.jpg" alt="Shall-Will" width="400px">
+
         
         <h5 class="uses">
             (a)
