--- a/should.html
+++ b/should.html
@@ -9,6 +9,8 @@
             <h3 class="title" id="main">
                 <center><u>Should</u></center>
             </h3>
+
+            <img class="visual" src="images/Should.jpg" alt="Should" width="400px">
         </div>
         <h5 class="uses">
             (a)
