--- a/would.html
+++ b/would.html
@@ -13,6 +13,8 @@
             </h1>
         </div>
 
+        <img class="visual" src="images/Would.jpg" alt="Would" width="400px">
+
         <h5 class="uses">
             (a)
         </h5>
