Added images for back and forward

--- a/must.html
+++ b/must.html
@@ -104,15 +104,13 @@
 <ul id="links">
             <li>
                   <a href="would.html">
-                        <img src="images/link.png" alt="link">
-                        Previous
+                    <img src="images/icons8-back-arrow-50.png" alt="Previous">                        Previous
                   </a>
             </li>
             
             <li>
                   <a href="have.html">
-                        <img src="images/link.png" alt="link">
-                        Next
+                    <img src="images/icons8-forward-button-50.png" alt="Next">                        Next
                   </a>
             </li>
         </ul>
