--- a/can.html
+++ b/can.html
@@ -148,13 +148,13 @@
         <ul id="links">
             <li>
                 <a href="table.html">
-                    <img src="images/link.png" alt="Previous">
+                    <img src="images/icons8-back-arrow-50.png" alt="Previous">
                     Previous
                 </a>
             </li>
             <li>
                 <a href="could.html">
-                    <img src="images/link.png" alt="Next">
+                    <img src="images/icons8-forward-button-50.png" alt="Next">
                     Next
                 </a>
             </li>
