--- a/could.html
+++ b/could.html
@@ -93,14 +93,12 @@
         <ul id="links">
             <li>
                 <a href="can.html">
-                    <img src="images/link.png" alt="Previous">
-                    Previous
+                    <img src="images/icons8-back-arrow-50.png" alt="Previous">                    Previous
                 </a>
             </li>
             <li>
                 <a href="may.html">
-                    <img src="images/link.png" alt="Next">
-                    Next
+                    <img src="images/icons8-forward-button-50.png" alt="Next">                    Next
                 </a>
             </li>
         </ul>
