--- a/have.html
+++ b/have.html
@@ -32,14 +32,12 @@
       <ul id="links">
             <li>
                 <a href="must.html">
-                    <img src="images/link.png" alt="Previous">
-                    Previous
+                  <img src="images/icons8-back-arrow-50.png" alt="Previous">                    Previous
                 </a>
             </li>
             <li>
                 <a href="need.html">
-                    <img src="images/link.png" alt="Next">
-                    Next
+                  <img src="images/icons8-forward-button-50.png" alt="Next">                    Next
                 </a>
             </li>
         </ul>    
