--- a/might.html
+++ b/might.html
@@ -68,15 +68,13 @@
         <ul id="links">
             <li>
                   <a href="may.html">
-                        <img src="images/link.png" alt="link">
-                        Previous
+                    <img src="images/icons8-back-arrow-50.png" alt="Previous">                        Previous
                   </a>
             </li>
             
             <li>
                   <a href="shall.html">
-                        <img src="images/link.png" alt="link">
-                        Next
+                    <img src="images/icons8-forward-button-50.png" alt="Next">                        Next
                   </a>
             </li>
         </ul>
