--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             <div  id="header">
                 <h3 id="main">Introduction</h3>
             </div>
-            <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTqVw0TsnZjo3ncbpxU5TEcNxLrCtonN2ADBQGHqJJ-cl6BpgiLhTVkDFKpuY17a1NlTRrlHTBGm6Wh/embed?start=false&loop=false&delayms=1000" frameborder="0" width="1280" height="749" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+            <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTqVw0TsnZjo3ncbpxU5TEcNxLrCtonN2ADBQGHqJJ-cl6BpgiLhTVkDFKpuY17a1NlTRrlHTBGm6Wh/embed?start=true&loop=true&delayms=1000" frameborder="0" width="640" height="389" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
          </article>
     </body>
 </html>
