--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
                 <h3 id="main">Introduction</h3>
             </div>
             <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTqVw0TsnZjo3ncbpxU5TEcNxLrCtonN2ADBQGHqJJ-cl6BpgiLhTVkDFKpuY17a1NlTRrlHTBGm6Wh/embed?start=true&loop=true&delayms=1000" frameborder="0" width="640" height="389" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+            <ul id="links">
+            <li>
+                <a href="table.html">
+                    <img src="images/icons8-forward-button-50.png" alt="Next">
+                    Next
+                </a>
+            </li>
+        </ul>
          </article>
     </body>
 </html>
